# bento

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  scheduler.py  version.py
app/auth/: context.py  deps.py  magic_links.py  pins.py  sessions.py  setup_gate.py
app/models/: __init__.py  discord_settings.py  entry.py  favorite.py  food.py  magic_link.py  mealie_settings.py  reminder_log.py  saved_meal.py  session.py  user.py
app/routers/: admin.py  auth_pages.py  entries.py  export.py  foods.py  pages.py  saved_meals.py  settings.py  trends.py
app/services/: discord.py  export.py  favorites.py  foods.py  logging.py  mealie.py  nutrition.py  reminders.py  saved_meals.py  settings.py  trends.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_foods.py  0003_entries.py  0004_favorites.py  0005_saved_meals.py  0006_discord_settings.py  0007_reminder_log.py  0008_mealie.py
static/css/: bento.css
static/js/: bento.js
templates/: _bottom_nav.html  _dashboard_body.html  _fab.html  _icons.html  _top_bar.html  base.html  home.html  settings.html  trends.html
templates/admin/: index.html  mealie.html  users.html
templates/auth/: login.html  login_pin.html  magic_invalid.html  magic_landing.html  setup.html  signup.html
templates/entries/: edit.html  log_dialog.html  today.html
templates/foods/: _favorite_button.html  _search_results.html  detail.html  edit.html  favorites.html  index.html  new.html  recents.html  scan.html
templates/saved_meals/: detail.html  (+3 more)
